@@ -1,3 +1,7 @@
+2007-11-30  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (do_printer_request): Fixed debugging output.
+
 2007-11-27  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_cancelJob): Use job-id instead of
